fixed some sonar issues in planning microservice